# x402-buy-spl-token

./: .gitignore  AGENTS.md  Cargo.toml  README.md  env.example  package.json  vercel.json
.github/workflows/: build-and-deploy.yml
docs/: BUY-SPL-TOKEN-DEVNET-TEST.md  HUMAN-STOREFRONT.md
migrations/: init.sql
public/: wallet.js  wallet.js.LICENSE.txt
public/.well-known/: x402-resources.json
scripts/: get-escrow-pda.sh  register-seller-with-registry.sh  test-buy-spl-token-devnet.sh
src/: amounts.rs  axum_adapter.rs  catalog.rs  catalog_api.rs  cold_start.rs  config.rs  cors.rs  db.rs  error.rs  handler.rs  init.rs  intent_contract.rs  lib.rs  main.rs  memory_ledger.rs  merchant_signer.rs  network.rs  orders.rs  parameters.rs  purchase_ledger.rs  quote.rs  registry_client.rs  route_handler.rs  rpc_retry.rs  seller_signer.rs  sla_builder.rs  sla_escrow_ttl.rs  state.rs
src/x402/: facilitator.rs  mod.rs  models.rs  pricing.rs
storefront/: index.html  package-lock.json  package.json  vite.config.ts
storefront/src/: app.css  main.ts  theme.css
storefront/src/app/: App.ts  PurchaseSheet.ts  TokenCard.ts  WalletHeader.ts
storefront/src/services/: canonicalJson.ts  catalog.ts  cluster.ts  clusterConstants.ts  inventory.ts  metadata.ts  slaEscrow.ts  theme.ts
storefront/wallet-adapter/: package-lock.json  package.json  webpack.config.js
storefront/wallet-adapter/src/: main.js  styles.css
