[package]
name = "x402-buy-spl-token"
description = "Open-source x402 sla-escrow reference seller: buy SPL tokens for USDC"
repository = "https://github.com/miralandlabs/x402-buy-spl-token"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "x402-buy-spl-token"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

http = "1.0"
vercel_runtime = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14"

chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bincode = "1.3"

solana-client = "^2.1"
solana-program = "^2.1"
solana-rpc-client = "^2.1"
solana-rpc-client-api = "^2.1"
solana-sdk = "^2.1"
solana-transaction-status = "^2.1"
solana-commitment-config = "^2.1"
solana-compute-budget-interface = "^2.2"
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
spl-token = { version = "^4", features = ["no-entrypoint"] }

reqwest = { version = "0.11", features = ["json"] }
rand = "0.10.0"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"

deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = "0.7"
postgres-openssl = "0.5"
openssl = "0.10"

jsonschema = { version = "0.30", default-features = false }
dashmap = "6"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
